# stock_pattern_recognizer

./: .gitignore  Omni_Scanner_Pro_Colab.ipynb  main.py  omni_scanner_pro.py  pattern_recognizer.py  pattern_strategy.pine  pyproject.toml  start.bat  test_integration.py
